--- a/templates/base.html
+++ b/templates/base.html
@@ -101,7 +101,7 @@
     <!-- Encabezado -->
     <header>
         <div class="logo">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Football_%28soccer_ball%29.svg/1200px-Football_%28soccer_ball%29.svg.png" alt="Logo Balón de Oro">
+            <img src="https://png.pngtree.com/png-clipart/20240312/original/pngtree-illustration-of-golden-soccer-symbol-it-s-winner-concept-png-image_14575046.png" alt="Logo Balón de Oro">
         </div>
         <h1>Sistema de Pagos RS COBRANZAS</h1>
         <nav>
